fix: update alignment of header and footer

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,7 +1,7 @@
 $beta-banner-height: 2.5rem;
 $filterbox-height: 5rem;
 $header-height: 3.8rem;
-$footer-height: 3.8rem;
+$footer-height: 6.125rem;
 $footer-height-mobile: 6.5rem;
 $result-count-height: 5.3rem;
 $comparison-height: 12rem;
